// Copyright 2024 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


message MonitoringService {
  string name = 1;
  string display_name = 2;
  MonitoringServiceCustom custom = 3;
  MonitoringServiceTelemetry telemetry = 4;
  map<string, string> user_labels = 5;
  string project = 6;
}

message MonitoringServiceCustom {
}

message MonitoringServiceTelemetry {
  string resource_name = 1;
}

message ApplyMonitoringServiceRequest {
  MonitoringService resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteMonitoringServiceRequest {
  string service_account_file = 1;
  MonitoringService resource = 2;
}

message ListMonitoringServiceRequest {
  string service_account_file = 1;
  string Project = 2;
}

message ListMonitoringServiceResponse {
  repeated MonitoringService items = 1;
}

service MonitoringServiceService {
  rpc ApplyMonitoringService(ApplyMonitoringServiceRequest) returns (MonitoringService);
  rpc DeleteMonitoringService(DeleteMonitoringServiceRequest) returns (google.protobuf.Empty);
  rpc ListMonitoringService(ListMonitoringServiceRequest) returns (ListMonitoringServiceResponse);
}
